--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		Name<input type="text" name="name" id="name" placeholder="Name"/><br>
+		Email<input type="email" name="Email" id="email" placeholder="Email"/><br>
+		Gender<input type="radio" name="gender" id="gender_m, gender_f" /><br>
+		Car Brands<input type="select" name="car brands" id="cars" placeholder="--Please choose an option--"/><br>
+		Age<input type="number" name="age" id="age" placeholder="Age"/><br>
+		DOB<input type="date" name="dob" id="dob"/><br>
+		Phone Number<input type="tel" name="number" id="tel" placeholder="xxx-xxx-xxxx"/><br>
+		Password<input type="password" name="password" id="password" placeholder="Password"/><br>
+		I agree to the TOS<input type="checkbox" id="tos"/><br>
+		<input type="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
